# ppaass

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  ppaass-agent-log.toml  ppaass-agent.toml  ppaass-proxy-log.toml  ppaass-proxy-start.sh  ppaass-proxy.toml  rustfmt.toml  test_udp_client.py  test_udp_server.py
.cargo/: config  config.toml
.fleet/: run.json
agent/: .browserslistrc  .gitignore  Cargo.toml  README.md  angular.json  karma.conf.js  package-lock.json  package.json
agent-android/: Cargo.toml
agent-desktop/: Cargo.toml
agent-desktop-lib/: Cargo.toml
agent-desktop-lib/src/: client.rs  config.rs  crypto.rs  error.rs  flow.rs  http.rs  lib.rs  pool.rs  server.rs  socks.rs
agent-desktop-lib/src/client/: framed.rs  message.rs
agent-desktop-lib/src/flow/: dispatcher.rs  http.rs  socks.rs
agent-desktop-lib/src/flow/http/: codec.rs
agent-desktop-lib/src/flow/socks/: codec.rs  message.rs
agent-desktop-lib/src/flow/socks/message/: init.rs  udp.rs
agent-desktop-lib/src/http/: codec.rs  framed.rs
agent-desktop-lib/src/socks/: codec.rs  framed.rs  message.rs  protocol.rs
agent-desktop-lib/src/socks/framed/: auth.rs  init.rs
agent-desktop-lib/src/socks/message/: auth.rs  init.rs  udp.rs
agent-desktop-linux/: Cargo.toml
agent-desktop-windows/: Cargo.toml
agent-desktop-windows/src/: common.rs  config.rs  constant.rs  main.rs
agent-lib/: Cargo.toml
agent-lib/src/: config.rs  crypto.rs  error.rs  flow.rs  lib.rs  pool.rs  processor.rs  server.rs
agent-lib/src/flow/: dispatcher.rs  http.rs  socks.rs
agent-linux/: Cargo.toml
agent-linux/src/: constant.rs  main.rs
agent-windows/: Cargo.toml
agent-windows/src/: constant.rs  main.rs
agent/src/: common.rs  config.rs  connection.rs  crypto.rs  error.rs  index.html  lib.rs  main.rs  pool.rs  server.rs  styles.scss
agent/src-tauri/: Cargo.toml  ppaass-agent.toml  tauri.conf.json
agent/src-tauri/log/: ppaass-agent.log.2022-07-09  ppaass-agent.log.2022-07-10  ppaass-agent.log.2022-07-11  ppaass-agent.log.2022-07-13  ppaass-agent.log.2022-07-18  ppaass-agent.log.2022-07-19  ppaass-agent.log.2022-07-20  ppaass-agent.log.2022-07-21  ppaass-agent.log.2022-07-22  ppaass-agent.log.2022-07-24
agent/src-tauri/src/: config.rs  main.rs  server.rs  service.rs  ui.rs
agent/src-tauri/src/message/: socks5.rs
agent/src-tauri/src/monitor/: event.rs
agent/src-tauri/src/service/: common.rs  http.rs  pool.rs  socks5.rs
agent/src-tauri/src/service/http/: connect.rs
agent/src-tauri/src/service/socks5/: auth.rs  init.rs
agent/src-tauri/src/service/socks5/init/: tcp_connect.rs  udp_associate.rs  udp_relay.rs
agent/src-tauri/src/ui/: common.rs  main_frame.rs
agent/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.footer.component.css  app.footer.component.html  app.footer.component.ts  app.menu.component.html  app.menu.component.ts  app.menuitem.component.html  app.menuitem.component.ts  app.module.ts  app.topbar.component.css  app.topbar.component.html  app.topbar.component.ts
agent/src/app/component/home/: home.component.html  home.component.scss  home.component.ts
agent/src/app/components/register/: register.component.css  register.component.html  register.component.ts
agent/src/app/components/settings/: settings.component.html  settings.component.ts
agent/src/app/dto/: BackendAgentConfiguration.ts  BackendServerStatus.ts  UiAgentConfiguration.ts
agent/src/app/service/: backend.service.ts
agent/src/processor/: dispatcher.rs  mod.rs
agent/src/processor/http/: codec.rs  mod.rs
agent/src/processor/socks/: codec.rs  mod.rs
agent/src/processor/socks/message/: auth.rs  init.rs  mod.rs  udp.rs
agent/src/transport/: dispatcher.rs  mod.rs
agent/src/transport/http/: codec.rs  mod.rs
agent/src/transport/socks/: codec.rs  mod.rs
agent/src/transport/socks/message/: auth.rs  init.rs  mod.rs  udp.rs
agent/tests/: test.rs
common/: Cargo.toml
common/src/: codec.rs  connection.rs  crypto.rs  error.rs  framed.rs  lib.rs  message.rs  serializer.rs  service.rs  types.rs
common/src/codec/: agent.rs  mod.rs  proxy.rs
common/src/connection/: agent.rs  mod.rs  proxy.rs
common/src/crypto/: aes.rs  blowfish.rs  mod.rs  rsa.rs
common/src/message/: address.rs  encryption.rs  generator.rs  mod.rs  payload.rs  types.rs
common/src/message/payload/: dns.rs  domain_resolve.rs  heartbeat.rs  mod.rs  tcp.rs  tcp_loop.rs  tcp_session_relay.rs  udp.rs  udp_destory.rs  udp_initialize.rs  udp_loop.rs  udp_relay.rs
common/tests/: test.rs  testing.rs
io/: Cargo.toml
io/src/: codec.rs  connection.rs  error.rs  framed.rs  lib.rs
protocol/: Cargo.toml
protocol/src/: error.rs  lib.rs  message.rs  serializer.rs
protocol/src/message/: address.rs  dns.rs  encryption.rs  payload.rs  types.rs
protocol/src/message/payload/: domain_resolve.rs  heartbeat.rs  tcp_destory.rs  tcp_initialize.rs  tcp_relay.rs  tcp_session_destroy.rs  tcp_session_init.rs  tcp_session_relay.rs
protocol/tests/: message.rs
proxy/: Cargo.toml
proxy/src/: agent.rs  arguments.rs  common.rs  config.rs  connection.rs  constant.rs  crypto.rs  error.rs  main.rs  manager.rs  processor.rs  server.rs  service.rs  target.rs  transport.rs  tunnel.rs  types.rs
proxy/src/connection/: tcp_loop.rs  udp_loop.rs
proxy/src/processor/: dns.rs  mod.rs  tcp.rs  udp.rs
proxy/src/processor/dns/: handler.rs
proxy/src/processor/tcp/: destination.rs  handler.rs  mod.rs  processor.rs
proxy/src/processor/udp/: handler.rs  mod.rs  processor.rs
proxy/src/service/: init.rs
proxy/src/service/tcp/: connect.rs  relay.rs
proxy/src/service/udp/: associate.rs  relay.rs
proxy/src/transport/: agent.rs  mod.rs  target.rs  tcp.rs  udp.rs
proxy/src/transport/tcp/: destination.rs  handler.rs  mod.rs
proxy/src/transport/udp/: handler.rs  mod.rs
proxy/src/tunnel/: repository.rs  tcp_session.rs
resources/config/: ppaass-agent-log.yaml  ppaass-agent-log.yml  ppaass-agent.toml  ppaass-proxy-log.yaml  ppaass-proxy-log.yml  ppaass-proxy.toml
tool/: Cargo.toml
tool/src/: main.rs
(+14 files in other folders)
