[workspace]
members = ["proxy", "agent-lib", "agent-linux", "agent-windows", "common"]
[workspace.package]
authors = ["Hao Qu"]
description = "A security network channel"
documentation = "https://github.com/quhxuxm/ppaass"
version = "0.1.0"
[workspace.dependencies]
aes = "*"
anyhow = "*"
async-trait = "*"
base64 = "*"
blowfish = "*"
bytecodec = "*"
bytes = "*"
chrono = "*"
cipher = "*"
clap = "*"
deadpool = "*"
dns-lookup = "*"
ecb = {version = "*", features = ["std"]}
futures = "*"
futures-util = "*"
httpcodec = "*"
lazy_static = "*"
lz4 = "*"
pin-project = "*"
pretty-hex = "*"
rand = "*"
rsa = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
thiserror = "*"
tokio = "*"
tokio-util = "*"
toml = "*"
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
url = "*"
uuid = {version = "*", features = ["v4"]}
