[workspace]
members = ["proxy", "agent-lib", "agent-linux", "agent-windows", "common", "tool"]
[workspace.package]
authors = ["Hao Qu"]
description = "A security network channel"
documentation = "https://github.com/quhxuxm/ppaass"
version = "0.1.0"
[workspace.dependencies]
aes = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
blowfish = "0.9"
bytecodec = "0.4"
bytes = "1.4"
chrono = "0.4"
cipher = "0.4"
clap = "4.1"
dns-lookup = "1.0"
ecb = {version = "0.1", features = ["std"]}
flate2 = "1.0"
futures = "0.3"
futures-util = "0.3"
httpcodec = "0.2"
lazy_static = "1.4"
pin-project = "1.0"
pretty-hex = "0.3"
rand = "0.8"
rsa = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.25"
tokio-util = "0.7"
toml = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
url = "2.3"
uuid = {version = "1.3", features = ["v4"]}
