[workspace]
members = ["proxy", "agent", "common", "tool"]
[workspace.package]
authors = ["Hao Qu"]
description = "A security network channel"
documentation = "https://github.com/quhxuxm/ppaass"
version = "0.1.0"
[workspace.dependencies]
aes = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
blowfish = "0.9"
bytecodec = "0.4"
bytes = "1.4"
chrono = "0.4"
cipher = "0.4"
clap = "4.1"
dns-lookup = "2.0.2"
ecb = {version = "0.1", features = ["std"]}
flate2 = "1.0"
futures = "0.3"
futures-util = "0.3"
httpcodec = "0.2"
pin-project = "1.0"
pretty-hex = "0.3"
rand = "0.8"
rsa = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.25"
tokio-util = "0.7"
toml = "0.7"
url = "2.3"
uuid = {version = "1.3", features = ["v4"]}
thiserror="1.0"
derive_more="0.99"
# serde_bytes = "0.11.9"
bincode="1.3.3"
tokio-stream = "0.1.14"
lazy_static="1.4.0"
# log4rs = "1.2.0"
log = "0.4.18"
tracing="0.1.37"
console-subscriber = "0.1.10"
tracing-log = "0.1.3"
tracing-subscriber="0.3.17"
tracing-appender = "0.2.2"