[package]
edition = "2021"
name = "agent-desktop-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {workspace = true}
ppaass-common = {path = "../common"}
ppaass-io = {path = "../io"}
ppaass-protocol = {path = "../protocol"}
tokio = {workspace = true}
tracing = {workspace = true}
