[package]
edition = "2021"
name = "agent-desktop-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecodec = {workspace = true}
bytes = {workspace = true}
httpcodec = {workspace = true}
ppaass-common = {path = "../common"}
ppaass-io = {path = "../io"}
ppaass-protocol = {path = "../protocol"}
snafu = {workspace = true, features = ["backtraces"]}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
tokio-util = {workspace = true, features = ["codec"]}
tracing = {workspace = true}
url = {workspace = true}
