[package]
edition = "2021"
name = "agent-desktop-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecodec = {workspace = true}
bytes = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true, features = ["std"]}
httpcodec = {workspace = true}
pin-project = {workspace = true}
ppaass-common = {path = "../common"}
ppaass-io = {path = "../io"}
ppaass-protocol = {path = "../protocol"}
serde = {workspace = true}
serde_derive = {workspace = true}
snafu = {workspace = true, features = ["backtraces"]}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
tokio-util = {workspace = true, features = ["codec"]}
toml = {workspace = true}
tracing = {workspace = true}
url = {workspace = true}
