[package]
edition = "2021"
name = "ppaass-agent"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
bytecodec = {workspace = true}
bytes = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true, features = ["std"]}
httpcodec = {workspace = true}
lazy_static = {workspace = true}
pin-project = {workspace = true}
ppaass-common = {path = "../common"}
pretty-hex = {workspace = true}
serde = {workspace = true}
serde_derive = {workspace = true}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
tokio-util = {workspace = true, features = ["codec"]}
toml = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-appender = {workspace = true}
url = {workspace = true}
thiserror = {workspace = true}
tokio-stream = {workspace = true}
chrono = {workspace = true}