[package]
edition = "2021"
name = "ppaass-agent"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppaass_agent_lib"
path = "src/lib.rs"

[[bin]]
name = "ppaass-agent"
path = "src/bin/bin.rs"

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
bytecodec = {workspace = true}
bytes = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true, features = ["std"]}
httpcodec = {workspace = true}
lazy_static = {workspace = true}
pin-project = {workspace = true}
ppaass-common = {path = "../common"}
pretty-hex = {workspace = true}
serde = {workspace = true}
serde_derive = {workspace = true}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
tokio-util = {workspace = true, features = ["codec"]}
toml = {workspace = true}
url = {workspace = true}
thiserror = {workspace = true}
tokio-stream = {workspace = true}
chrono = {workspace = true}
derive_more= {workspace = true}
log4rs = {workspace = true}
log = {workspace = true}
uuid = { version = "1.5.0", features = ["v4"] }
