[package]
edition = "2021"
name = "ppaass-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = {workspace = true}
blowfish = {workspace = true}
cipher = {workspace = true}
ecb = {workspace = true}
rand = {workspace = true}
rsa = {workspace = true}
serde_json = {workspace = true}
snafu = {workspace = true, features = ["backtraces"]}
tracing = {workspace = true}
uuid = {workspace = true}
