[package]
edition = "2021"
name = "ppaass-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = {workspace = true}
anyhow = {workspace = true, features = ["backtrace"]}
base64 = {workspace = true}
blowfish = {workspace = true}
bytes = {workspace = true}
chrono = {workspace = true}
cipher = {workspace = true}
ecb = {workspace = true}
flate2 = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true, features = ["alloc"]}
pretty-hex = {workspace = true}
rand = {workspace = true}
rsa = {workspace = true}
serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread"]}
tokio-util = {workspace = true, features = ["codec"]}
uuid = {workspace = true}
pin-project = {workspace = true}
log = {workspace = true}
thiserror = {workspace = true}
serde_bytes = {workspace = true}
derive_more = {workspace = true}