[package]
edition = "2021"
name = "ppaass-io"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace = true}
futures-util = {workspace = true, features = ["alloc"]}
pin-project = {workspace = true}
ppaass-common = {path = "../common"}
ppaass-protocol = {path = "../protocol"}
serde = {workspace = true}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread"]}
tokio-util = {workspace = true, features = ["codec"]}
