[package]
edition = "2021"
name = "ppaass-io"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true, features = ["alloc"]}
lz4 = {workspace = true}
pin-project = {workspace = true}
ppaass-common = {path = "../common"}
ppaass-protocol = {path = "../protocol"}
pretty-hex = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread"]}
tokio-util = {workspace = true, features = ["codec"]}
tracing = {workspace = true}
