[package]
edition = "2021"
name = "ppaass-protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = {workspace = true}
bytes = {workspace = true}
ppaass-common = {path = "../common"}
serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace = true}
tokio-util = {workspace = true, features = ["codec"]}
tracing = {workspace = true}
