[package]
edition = "2021"
name = "ppaass-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
hotwatch = {workspace = true}
ppaass-common = {path = "../common"}
ppaass-protocol = {path = "../protocol"}
serde = {workspace = true}
serde_derive = {workspace = true}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread"]}
toml = {workspace = true}
tracing = {workspace = true}
