[package]
edition = "2021"
name = "ppaass-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true, features = ["backtrace"]}
bytes = {workspace = true}
chrono = {workspace = true}
clap = {workspace = true, features = ["derive"]}
dns-lookup = {workspace = true}
futures = {workspace = true}
futures-util = {workspace = true, features = ["std"]}
ppaass-common = {path = "../common"}
ppaass-io = {path = "../io"}
ppaass-protocol = {path = "../protocol"}
serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
tokio-util = {workspace = true, features = ["codec"]}
toml = {workspace = true}
tracing = {workspace = true}
tracing-appender = {workspace = true}
tracing-subscriber = {workspace = true}
