[package]
description = "The ppaass agent"
edition = "2021"
name = "agent"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
split-debuginfo = '...' # Platform-specific.
[[bin]]
name = "ppaass-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = {version = "1.0.3", features = [] }

[dependencies]
anyhow = "1"
bytecodec = "0.4"
bytes = "1"
chrono = "0.4"
clap = {version = "3", features = ["derive"] }
common = {path = "../../common"}
futures = "0.3"
httpcodec = "0.2"
pin-project = "1.0"
pretty-hex = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0"
socket2 = "0.4"
tauri = {version = "1.0.3", features = ["api-all"] }
tokio = {version = "1", features = ["macros", "time", "net", "io-util", "rt-multi-thread"] }
tokio-util = {version = "0.7", features = ["codec"] }
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
url = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
